# ur3_demo_koepel

./: README.md
my_universal_robot_controllers/launch/: ur3_bringup.launch  ur3_control.launch
my_ur3_moveit_config/config/: fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  ur3_robot.srdf
my_ur3_moveit_config/launch/: demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  planning_context.launch  trajectory_execution.launch.xml  ur3_robot_moveit_controller_manager.launch.xml
my_ur_description/urdf/ur3/: ur3_robot.urdf.xacro
ur3_demo/: CMakeLists.txt  package.xml
ur3_demo/launch/: pick_n_place_demo.launch
ur3_moveit_demo/ur3_demo_flexbe_behaviors/ur3_demo_behaviors/: CMakeLists.txt  package.xml  setup.py
ur3_moveit_demo/ur3_demo_flexbe_behaviors/ur3_demo_behaviors/manifest/: behaivior_go_pose_ik.xml  behaivior_go_to_object.xml  behaivior_main.xml  pick_n_place.xml
ur3_moveit_demo/ur3_demo_flexbe_behaviors/ur3_demo_behaviors/src/ur3_demo_behaviors/: behaivior_go_to_object_sm.py  behaivior_main_sm.py  pick_n_place_sm.py
urdf_support/: CMakeLists.txt  package.xml
urdf_support/avans_vacuum_gripper/meshes/: World.STL
urdf_support/avans_vacuum_gripper/meshes/visual/: vacuum_tool.stl
urdf_support/avans_vacuum_gripper/urdf/: avans_vacuum_gripper.xacro  ur3_with_vacuum_tool.urdf  ur3_with_vacuum_tool.xacro
urdf_support/beugel/urdf/: Beugel.SLDPRT.urdf  Beugel.urdf.xacro
